# CA

./: .coverage  .env.sample  .gitignore  CHANGELOG.md  CRYPTO_INFRASTRUCTURE_STATUS.md  Dockerfile.dashboard  README.md  demo_ccxt_potential.py  demo_crypto_analysis.py  demo_onchain_potential.py  docker-compose.ops.yml  pyproject.toml  requirements-docs.txt  requirements.txt  test_btc_fetch.py  test_ccxt_adapters.py  test_comprehensive_integration.py  test_crypto_cache.py  test_crypto_integration.py  test_crypto_simple.py  test_framework.py  test_integration_success.py  test_metric_registry.py  test_onchain_analytics.py  test_onchain_integration.py  test_simple_validation.py
.github/workflows/: ci.yml
cli/: main.py
docs/: changelog.rst  conf.py  index.rst  quickstart.rst
docs/_build/html/: .buildinfo  changelog.html  contributing.html  genindex.html  (+7 more)
docs/examples/: index.rst
docs/tutorials/: arbitrage_detector.ipynb  arbitrage_detector.rst  btc_backtest.ipynb  btc_backtest.rst  onchain_screener.ipynb  onchain_screener.rst
monitoring/: prometheus.yml
tests/: __init__.py
tests/config/: __init__.py  test_crypto_toggle.py
tradingagents/: default_config.py
tradingagents/agents/: __init__.py
tradingagents/crypto/: __init__.py
tradingagents/dataflows/: ccxt_adapters.py  crypto_cache.py  crypto_utils.py  googlenews_utils.py  interface.py  metric_registry.py  onchain_loader.py
tradingagents/graph/: conditional_logic.py  setup.py  trading_graph.py
tradingagents/ops/: __init__.py  cli.py  dashboard_server.py  health_monitor.py  metrics_collector.py
(+65 files in other folders)
